--- a/src/components/HomePage/Blurb/styles.scss
+++ b/src/components/HomePage/Blurb/styles.scss
@@ -1,9 +1,48 @@
+$cheeses: url('cheese-bread-small.jpg');
+$wines: url('bouchons-small.jpg');
+
 .blurb {
-  display: flex;
+  width: auto;
+  color: #fff;
   &__cheeses, &__wines {
-    border: 1px solid black;
     width: 100%;
+    height: 20vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #2D343C;
+    background-position: 0 15%;
   }
   &__cheeses {
+    background-image: $cheeses;
+  }
+  &__wines {
+    background-image: $wines;
+  }
+  &__article {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(46, 44, 44, 0.6);
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
+    &--title {
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+    &--text {
+      padding-top: 0.5em;
+      width: 80%;
+    }
+  }
+  &__button {
+    border: none;
+    border-radius: 5px;
+    padding: 0.5em;
+    margin-top: 0.5em;
+    color: #fff;
+    background-color: #31bb24;
   }
 }
