--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,17 +1,16 @@
 @use 'reset';
 @use 'vars';
 
-body {
-  font-family: sans-serif;
-}
+// body {
+//   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+// }
 
-/* 
-  // or you can import your own font
-  @font-face {
-    font-family: 'Roboto';
-    src: url('../assets/fonts/Roboto-Regular.ttf');
-  }
-  body {
-    font-family: 'Roboto', sans-serif;
-  }
-*/
+
+// or you can import your own font
+@font-face {
+  font-family: 'Roboto';
+  src: url('../assets/fonts/Roboto-Regular.ttf');
+}
+body {
+  font-family: 'Roboto', sans-serif;
+}
