--- a/src/components/HomePage/MainHeader/styles.scss
+++ b/src/components/HomePage/MainHeader/styles.scss
@@ -1,4 +1,41 @@
+@use 'src/styles/vars';
+
 .mainHeader {
   width: 100vh;
-  height: 150px;
+  height: 450px;
+  &__image {
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+  &__logo {
+    position: fixed;
+    width: 130px;
+    height: 90px;
+    top: 100px;
+    right: calc(50%-10px);
+    border: 1px solid rgb(131, 131, 131);
+    border-radius: 20%;
+    background-color: rgba(255, 253, 253, 0.336);
+    box-shadow: inset 2px 2px 15px black;
+  }
+  &__logoImage {
+    width: 100px;
+    padding-top: 10px;
+  }
+  &__nav {
+    position: relative;
+    color: white;
+  }
+  &__link {
+    margin-left: 30px;
+    position: relative;
+    top: 300px;
+    left: -80px;
+  }
+}
+
+.connexion__button {
+  position: relative;
+  right: -120px;
 }
