--- a/src/components/HomePage/Blurb/styles.scss
+++ b/src/components/HomePage/Blurb/styles.scss
@@ -35,6 +35,11 @@ $wines: url('bouchons-small.jpg');
     &--text {
       padding-top: 0.5em;
       width: 80%;
+      height: 100%;
+      display: none;
+      &-active {
+        display: block;
+      }
     }
   }
   &__button {
