add animate.css to dependencies + animation to the MainHeader, mobilefirst design updated with grid

--- a/src/components/HomePage/MainHeader/styles.scss
+++ b/src/components/HomePage/MainHeader/styles.scss
@@ -2,40 +2,41 @@
 
 .mainHeader {
   width: 100vh;
-  height: 450px;
-  &__image {
-    position: fixed;
-    top: 0;
-    left: 0;
+  height: 400px;
+  background-image: url("./glass-plate-small.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  &__connexion {
+    justify-self: end;
+    margin: 1rem 1rem 0 0;
   }
   &__logo {
-    position: fixed;
     width: 130px;
     height: 90px;
-    top: 100px;
-    right: calc(50%-10px);
     border: 1px solid rgb(131, 131, 131);
     border-radius: 20%;
     background-color: rgba(255, 253, 253, 0.336);
     box-shadow: inset 2px 2px 15px black;
+    justify-self: center;
+    text-align: center;
   }
   &__logoImage {
     width: 100px;
-    padding-top: 10px;
+    padding-top: 10px; 
   }
   &__nav {
-    position: relative;
     color: white;
+    align-self: end;
+    justify-self: center;
+    padding-bottom: 2rem;
   }
   &__link {
     margin-left: 30px;
-    position: relative;
-    top: 300px;
-    left: -80px;
+    padding: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
   }
-}
-
-.connexion__button {
-  position: relative;
-  right: -120px;
 }
