Integration of the footer

--- a/src/components/HomePage/Concept/styles.scss
+++ b/src/components/HomePage/Concept/styles.scss
@@ -3,7 +3,7 @@
 .concept {
   height: 200px;
   width: 100vh;
-  background-color: #2d343c;
+  background-color: #2C3E50;
   padding: 1rem;
   &__title {
     color: rgb(219, 211, 211);
