--- a/src/components/Connexion/styles.scss
+++ b/src/components/Connexion/styles.scss
@@ -1,15 +1,21 @@
 @use 'src/styles/vars';
 
 .connexion__button {
-  border-radius: 28px;
-  background-color:#44c767;
-	border:1px solid #18ab29;
+  border-radius: 2px;
+  background-color: transparent;
+  color: vars.$secondary-color;
+	border: 2px solid vars.$secondary-color;
 	display:inline-block;
 	cursor:pointer;
-	color:#ffffff;
 	font-family:Arial;
-	font-size:15px;
+  font-size: 0.8em;
+  font-weight: bold;
+  text-transform: uppercase;
 	padding:10px 20px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #2f6627;
+  text-shadow:0px 1px 0px #2f6627;
+  &:hover {
+    color: vars.$alt-color;
+    border-color: vars.$alt-color;
+  }
 }
