--- a/src/components/HomePage/MainHeader/styles.scss
+++ b/src/components/HomePage/MainHeader/styles.scss
@@ -1,8 +1,8 @@
 @use 'src/styles/vars';
 
 .mainHeader {
-  width: 100%;
-  height: 400px;
+  // width: 100%;
+  height: 60vh;
   background-image: url("./glass-plate-small.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -12,7 +12,7 @@
     margin: 1rem 1rem 0 0;
   }
   &__logoImage {
-    width: 180px;
+    width: 15em;
     padding-top: 10px; 
     justify-self: center;
     text-align: center;
