small modifications on Concept and Blurb

--- a/src/components/HomePage/Blurb/styles.scss
+++ b/src/components/HomePage/Blurb/styles.scss
@@ -1,7 +1,7 @@
 @use 'src/styles/vars';
 
-$cheeses: url('cheese-bread-small.jpg');
-$wines: url('bouchons-small.jpg');
+$cheeses: url('cheese-bread-medium.jpg');
+$wines: url('bouchons-medium.jpg');
 
 .blurb {
   width: 100%;
