--- a/src/components/HomePage/Concept/styles.scss
+++ b/src/components/HomePage/Concept/styles.scss
@@ -9,7 +9,7 @@
     position: absolute;
     font-style: italic;
     top: 5px;
-    left: 1.5em;
+    left: 5px;
     color: vars.$alt-color;
     font-size: 2rem;
   }
