--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,5 +1,10 @@
 @use 'src/styles/vars';
+$bg-img: url('./vignes-medium.jpg');
 
 .header {
-
+  border-bottom: 3px solid vars.$alt-color;
+  background-image: $bg-img;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
