--- a/src/components/List/Products/styles.scss
+++ b/src/components/List/Products/styles.scss
@@ -31,7 +31,7 @@
     z-index: 1;
     bottom: 15px;
     left: 1.5em;
-    color: #fff;
+    color: vars.$secondary-color;
     text-shadow: 1px 1px 2px #666;
     opacity: 0.8;
     &:hover {
