--- a/src/components/List/Title/styles.scss
+++ b/src/components/List/Title/styles.scss
@@ -3,6 +3,6 @@
 h2.title {
   font-size: 2.5em;
   font-weight: bold;
-  color: #fff;
+  color: vars.$secondary-color;
   padding-bottom: vars.$gutter * 2;
 }
