--- a/src/components/Nav/styles.scss
+++ b/src/components/Nav/styles.scss
@@ -1,12 +1,22 @@
 @use 'src/styles/vars';
 
 .menu {
-  font-size: 2rem;
+  padding: vars.$gutter * 3;
+  font-size: 2.2rem;
+  width: 100%;
+  height: 100%;
   text-align: center;
-  margin-top: 2rem;
-  padding: 1rem;
-  background-color: grey;
+  background-color: rgba(29, 31, 54, 0.5);
   &__link {
-    margin-left: 2rem;
+    margin: 0 vars.$gutter * 3;
+    color: vars.$secondary-color;
+    &--active {
+      color: vars.$alt-color;
+    }
+    &:hover {
+      color: vars.$alt-color;
+      border-bottom: 3px solid vars.$alt-color;
+      transition: 0.3s;
+    }
   }
 }
