--- a/src/components/BackOffice/styles.scss
+++ b/src/components/BackOffice/styles.scss
@@ -2,4 +2,13 @@
 
 .backOffice {
   color: white;
+  height: 100vh;
+}
+.sideBar {
+  position: fixed;
+  left: 10%;
+  width: 18%;
+  min-height: 100vh;
+  top: 0;
+  background-color: vars.$alt-color;
 }
