--- a/src/components/LoginForm/Form/styles.scss
+++ b/src/components/LoginForm/Form/styles.scss
@@ -38,7 +38,7 @@
     }
   }
   &__button {
-    margin-top: vars.$gutter / 2;
+    margin: (vars.$gutter / 2) 0;
     padding: vars.$gutter / 2;
     background-color: transparent;
     color: vars.$secondary-color;
@@ -47,6 +47,18 @@
     &:hover {
       color: vars.$alt-color;
       border: 2px solid vars.$alt-color;
+    }
+    &--logged {
+      margin-top: 0;
+      padding: vars.$gutter / 2;
+      background-color: transparent;
+      color: vars.$secondary-color;
+      border: 2px solid vars.$alt-color;
+      border-radius: 3px;
+      &:hover {
+        color: vars.$alt-color;
+        border: 2px solid vars.$alt-color;
+      }
     }
   }
 }
@@ -82,7 +94,7 @@
       }
     }
     &__button {
-      margin-top: vars.$gutter;
+      margin: vars.$gutter 0;
       padding: vars.$gutter / 1.5;
       font-size: 1.2em;
     }
