all add form added, dynamisation of all product and user page on BO, modal on User, routing done

--- a/src/components/BackOffice/styles.scss
+++ b/src/components/BackOffice/styles.scss
@@ -25,3 +25,19 @@
 .produits {
   margin-left: 250px;
 }
+
+.users {
+  margin-left: 250px;
+}
+
+.addCheese {
+  margin-left: 250px;
+}
+
+.addWine {
+  margin-left: 250px;
+}
+
+.addUser {
+  margin-left: 250px;
+}
