--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -24,6 +24,25 @@
     padding-top: vars.$gutter / 2;
     font-size: 1em;
   }
+  &__button {
+    border-radius: 2px;
+    background-color: transparent;
+    color: vars.$secondary-color;
+    border: 2px solid vars.$secondary-color;
+    display:inline-block;
+    cursor:pointer;
+    text-align: center;
+    font-size: 0.8em;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding:10px 20px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #2f6627;
+    &:hover {
+      color: vars.$alt-color;
+      border-color: vars.$alt-color;
+    }
+  }
 }
 
 @media (min-width: 1024px) {
