--- a/src/components/WineDetail/styles.scss
+++ b/src/components/WineDetail/styles.scss
@@ -1,6 +1,6 @@
 @use 'src/styles/vars';
 
-.productDetail {
+.wineDetail {
   background-color: #1B1E31;
   // background-image: url("./backgroundthemesoft.jpg");
   background-size: cover;
