--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,8 +11,12 @@
 //   font-family: 'Roboto';
 //   src: url('../assets/fonts/Roboto-Regular.ttf');
 // }
-body {
+
+
+body, html {
   background-color: vars.$main-color;
+  // overflow: hidden;
+  // scroll-snap-type: y mandatory;
 }
 
 p, button {
