mini css tests (to be confirmed on another branch later

--- a/src/components/List/Products/styles.scss
+++ b/src/components/List/Products/styles.scss
@@ -17,13 +17,16 @@
   display: block;
   box-sizing: border-box;
   position: relative;
-  opacity: 0.75;
+  background-color: vars.$main-color;
+  // opacity: 0.9;
+  // margin: vars.$gutter;
     &:hover {
       opacity: 1;
     }
   &__img {
     max-width: 100%;
     border-radius: 5px;
+    padding: vars.$gutter * 2;
     box-shadow: 1px 1px 5px #000;
   }
   &__title {
