--- a/src/components/HomePage/Concept/styles.scss
+++ b/src/components/HomePage/Concept/styles.scss
@@ -29,14 +29,18 @@
     &__title {
       left: -2em;
       top: -2em;
-      // background-color: rgba(29, 31, 54, 0.5);
-      // border-bottom: 1px solid vars.$secondary-color;
       padding: vars.$gutter / 3;
       font-size: 2.2em;
     }
     &__content {
-      border-left: 4px solid vars.$main-color;
+      border-left: 3px solid vars.$main-color;
       border-radius: 0 0 0 15px;
+      font-size: 1.2em;
+      line-height: 1.7em;
     }
   }
+}
+
+@media (min-width: 1024px) {
+  
 }
