--- a/src/components/HomePage/Concept/styles.scss
+++ b/src/components/HomePage/Concept/styles.scss
@@ -2,31 +2,34 @@
 
 .concept {
   background-color: vars.$secondary-color;
-  margin: vars.$gutter * 2 vars.$gutter * 4;
+  margin: vars.$gutter * 2;
   padding: vars.$gutter vars.$gutter * 2;
-  position: relative;
+  // position: relative;
   &__title {
-    position: absolute;
+    // position: absolute;
     font-style: italic;
-    top: 5px;
-    left: 5px;
+    // top: -2em;
+    // left: -2em;
     color: vars.$alt-color;
     font-size: 2rem;
   }
   &__content {
     font-size: 1rem;
-    margin: 1em;
-    padding: 1em;
-    line-height: 1.5em;
+    margin: vars.$gutter / 2;
+    padding: vars.$gutter / 2;
+    line-height: 1.2em;
   }
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
   .concept {
-    margin: vars.$gutter * 6 vars.$gutter * 12;
-    padding: vars.$gutter * 2 vars.$gutter * 4;
+    background-color: vars.$secondary-color;
+    margin: vars.$gutter * 4 vars.$gutter * 8;
+    padding: vars.$gutter vars.$gutter * 2;
+    position: relative;
     &__title {
+      position: absolute;
       left: -2em;
       top: -2em;
       padding: vars.$gutter / 3;
@@ -35,12 +38,17 @@
     &__content {
       border-left: 3px solid vars.$main-color;
       border-radius: 0 0 0 15px;
-      font-size: 1.2em;
-      line-height: 1.7em;
     }
   }
 }
 
 @media (min-width: 1024px) {
-  
+  .concept {
+    margin: vars.$gutter * 6 vars.$gutter * 10;
+    padding: vars.$gutter * 2 vars.$gutter * 4;
+    &__content {
+      font-size: 1.2em;
+      line-height: 1.7em;
+    }
+  }
 }
