--- a/src/components/HomePage/Blurb/styles.scss
+++ b/src/components/HomePage/Blurb/styles.scss
@@ -41,10 +41,10 @@ $wines: url('bouchons-medium.jpg');
       transition: 0.3s;
     }
     &--text {
-      // display: none;
+      display: none;
       text-align: center;
       padding: 0.8em;
-      visibility: hidden;
+      // visibility: hidden;
       transition: 0.3s;
     }
   }
@@ -60,24 +60,32 @@ $wines: url('bouchons-medium.jpg');
   }
 }
 
+@keyframes fadein {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
 h3.opened {
   padding-top: 0.5em;
-  transition: 0.3s;
+  transition: 1s;
 }
 
 p.opened {
   padding: 1.5em;
-  // display: block;
-  visibility: visible;
+  display: block;
+  // visibility: visible;
   text-align: center;
   height: auto;
-  transition: 0.3s;
+  transition: 1s;
+  line-height: 1.1em;
+  -webkit-animation: fadein 0.4s ease-in alternate;
+  -moz-animation: fadein 0.4s ease-in alternate;
+  animation: fadein 0.4s ease-in alternate;
 }
 
 div.opened {
-  // width: 200%;
-  height: 30vh;
-  transition: 0.3s;
+  height: 50vh;
+  transition: 0.5s;
 }
 
 // Medium devices (tablets, 768px and up)
