--- a/src/components/HomePage/Concept/styles.scss
+++ b/src/components/HomePage/Concept/styles.scss
@@ -3,7 +3,7 @@
 .concept {
   background-color: vars.$secondary-color;
   margin: vars.$gutter * 2;
-  padding: vars.$gutter vars.$gutter * 2;
+  padding: vars.$gutter;
   // position: relative;
   &__title {
     // position: absolute;
@@ -17,7 +17,7 @@
     font-size: 1rem;
     margin: vars.$gutter / 2;
     padding: vars.$gutter / 2;
-    line-height: 1.2em;
+    line-height: 1.3em;
   }
 }
 
