--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -44,6 +44,12 @@
   }
 }
 
+@media (min-width: 768px) {
+  .footer {
+    padding: vars.$gutter * 4;
+  }
+}
+
 @media (min-width: 1024px) {
   .footer {
     padding: vars.$gutter * 2 vars.$gutter * 4;
