HomePage style seems ok, reponsive ok

--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -52,7 +52,7 @@
 
 @media (min-width: 1024px) {
   .footer {
-    padding: vars.$gutter * 2 vars.$gutter * 4;
+    padding: vars.$gutter * 6;
     &__grid {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
