validation homepage style by the team + links in footer add to get wines and cheeses

--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -66,6 +66,9 @@
       display: block;
       justify-self: center;
       align-self: center;
+      &:hover {
+        color: vars.$alt-color;
+      }
     }
     &__div__title {
       font-weight: bold;
