--- a/src/components/HomePage/Blurb/styles.scss
+++ b/src/components/HomePage/Blurb/styles.scss
@@ -105,6 +105,7 @@ div.opened {
     width: 60%;
     transition: 0.3s;
     padding: vars.$gutter vars.$gutter / 2;
+    line-height: 1.4em;
   }
 
   div.opened {
