--- a/src/components/List/Products/styles.scss
+++ b/src/components/List/Products/styles.scss
@@ -19,14 +19,14 @@
   position: relative;
   background-color: vars.$main-color;
   // opacity: 0.9;
-  // margin: vars.$gutter;
+  margin: vars.$gutter / 2;
     &:hover {
       opacity: 1;
     }
   &__img {
     max-width: 100%;
     border-radius: 5px;
-    padding: vars.$gutter * 2;
+    // padding: vars.$gutter * 2;
     box-shadow: 1px 1px 5px #000;
   }
   &__title {
@@ -35,10 +35,13 @@
     bottom: 15px;
     left: 1.5em;
     color: vars.$secondary-color;
+    background-color: rgba(29, 31, 54, 0.5);
+    border-radius: 3px;
+    font-size: 1.2em;
+    padding: vars.$gutter / 2;
     text-shadow: 1px 1px 2px #666;
-    opacity: 0.8;
     &:hover {
-      opacity: 1;
+      color: vars.$alt-color;
     }
   }
 }
