--- a/src/components/BackOffice/ModalPage/styles.scss
+++ b/src/components/BackOffice/ModalPage/styles.scss
@@ -1,10 +1,9 @@
 @use 'src/styles/vars';
 
 .modal {
-  margin-top: 2rem;
-  &__table {
-    border: 2px solid black;
-  }
+  margin-top: -2rem;
+  border:2px solid;
+  width: 450px;
   &__title {
     border: 1px solid black;
     padding: vars.$gutter/2;
@@ -12,16 +11,20 @@
     font-weight: bold;
     font-size: vars.$gutter;
     text-transform: uppercase;
+    background-color: vars.$alt-color;
   }
   &__content {
     border: 1px solid black;
     padding-left: vars.$gutter/3;
+    padding-top: vars.$gutter;
+    padding-bottom: vars.$gutter;
     vertical-align: middle;
+
   }
 }
 
 .editCheese {
-  width: 40vw;
+  width: 450px;
   &__title {
     margin-bottom: vars.$gutter;
     text-decoration: underline;
@@ -33,11 +36,14 @@
   &__form {
     display: flex;
     flex-direction: column;
+    background-color: black;
   }
   &__label {
     font-weight: bold;
     font-size: vars.$gutter;
     margin-top: vars.$gutter/2;
+    color: vars.$alt-color;
+    
   }
   &__input {
     display: block;
@@ -67,8 +73,4 @@
       color: black;
     }
   }
-}
-
-.description {
-  margin-top: 0;
 }
