--- a/src/components/BackOffice/ModalUser/styles.scss
+++ b/src/components/BackOffice/ModalUser/styles.scss
@@ -1,75 +1,75 @@
-@use 'src/styles/vars';
+// @use 'src/styles/vars';
 
-.modal__user {
-  margin-top: vars.$gutter*6;
-  &__table {
-    border: 2px solid black;
-    width: 40vw;
-  }
-  &__title {
-    border: 1px solid black;
-    padding: vars.$gutter/2;
-    text-align: center;
-    font-weight: bold;
-    font-size: vars.$gutter;
-    text-transform: uppercase;
-  }
-  &__content {
-    border: 1px solid black;
-    padding-left: vars.$gutter/3;
-    vertical-align: middle;
-  }
-}
+// .modal__user {
+//   margin-top: vars.$gutter*6;
+//   &__table {
+//     border: 2px solid black;
+//     width: 40vw;
+//   }
+//   &__title {
+//     border: 1px solid black;
+//     padding: vars.$gutter/2;
+//     text-align: center;
+//     font-weight: bold;
+//     font-size: vars.$gutter;
+//     text-transform: uppercase;
+//   }
+//   &__content {
+//     border: 1px solid black;
+//     padding-left: vars.$gutter/3;
+//     vertical-align: middle;
+//   }
+// }
 
-.editUser {
-  min-width: 40vw;
-  &__title {
-    margin-bottom: vars.$gutter;
-    text-decoration: underline;
-    font-size: vars.$gutter*1.5;
-  }
-}
+// .editUser {
+//   min-width: 40vw;
+//   &__title {
+//     margin-bottom: vars.$gutter;
+//     text-decoration: underline;
+//     font-size: vars.$gutter*1.5;
+//   }
+// }
 
-.edit {
-  &__form {
-    display: flex;
-    flex-direction: column;
-  }
-  &__label {
-    font-weight: bold;
-    font-size: vars.$gutter;
-    // margin-top: vars.$gutter/2;
-  }
-  &__input {
-    display: block;
-    width: 100%;
-    // margin-top: vars.$gutter/2;
-    // margin-bottom: vars.$gutter/2;
-    padding: vars.$gutter/2;
-    &__description {
-      height: 100px;
-      margin-top: vars.$gutter/2;
-      display: block;
-      width: 100%;
-    }
-  }
-  &__button {
-    color: vars.$alt-color;
-    background-color: rgba(0, 0, 0, 0);
-    border: 2px solid vars.$alt-color;
-    padding: vars.$gutter/2;
-    font-weight: bold;
-    width: 100px;
-    border-radius: 20%;
-    margin: vars.$gutter auto 0 auto;
+// .edit {
+//   &__form {
+//     display: flex;
+//     flex-direction: column;
+//   }
+//   &__label {
+//     font-weight: bold;
+//     font-size: vars.$gutter;
+//     // margin-top: vars.$gutter/2;
+//   }
+//   &__input {
+//     display: block;
+//     width: 100%;
+//     // margin-top: vars.$gutter/2;
+//     // margin-bottom: vars.$gutter/2;
+//     padding: vars.$gutter/2;
+//     &__description {
+//       height: 100px;
+//       margin-top: vars.$gutter/2;
+//       display: block;
+//       width: 100%;
+//     }
+//   }
+//   &__button {
+//     color: vars.$alt-color;
+//     background-color: rgba(0, 0, 0, 0);
+//     border: 2px solid vars.$alt-color;
+//     padding: vars.$gutter/2;
+//     font-weight: bold;
+//     width: 100px;
+//     border-radius: 20%;
+//     margin: vars.$gutter auto 0 auto;
   
-    &:hover {
-      background-color: vars.$alt-color;
-      color: black;
-    }
-  }
-}
+//     &:hover {
+//       background-color: vars.$alt-color;
+//       color: black;
+//     }
+//   }
+// }
 
-.description {
-  margin-top: 0;
-}
+// .description {
+//   margin-top: 0;
+// }
