css modification on modals

--- a/src/components/BackOffice/ModalWine/styles.scss
+++ b/src/components/BackOffice/ModalWine/styles.scss
@@ -1,74 +1,84 @@
-// @use 'src/styles/vars';
+@use 'src/styles/vars';
 
-// .modal {
-//   margin-top: 2rem;
-//   &__table {
-//     border: 2px solid black;
-//   }
-//   &__title {
-//     border: 1px solid black;
-//     padding: vars.$gutter/2;
-//     text-align: center;
-//     font-weight: bold;
-//     font-size: vars.$gutter;
-//     text-transform: uppercase;
-//   }
-//   &__content {
-//     border: 1px solid black;
-//     padding-left: vars.$gutter/3;
-//     vertical-align: middle;
-//   }
-// }
+.modal {
+  margin-top: -2rem;
+  border:2px solid;
+  width: 450px;
+  &__title {
+    border: 1px solid black;
+    padding: vars.$gutter/2;
+    text-align: center;
+    font-weight: bold;
+    font-size: vars.$gutter;
+    text-transform: uppercase;
+    background-color: vars.$alt-color;
+  }
+  &__content {
+    border: 1px solid black;
+    padding-left: vars.$gutter/3;
+    padding-top: vars.$gutter;
+    padding-bottom: vars.$gutter;
+    vertical-align: middle;
 
-// .editWine {
-//   width: 40vw;
-//   &__title {
-//     margin-bottom: vars.$gutter;
-//     text-decoration: underline;
-//     font-size: vars.$gutter*1.5;
-//   }
-// }
+  }
+}
 
-// .edit {
-//   &__form {
-//     display: flex;
-//     flex-direction: column;
-//   }
-//   &__label {
-//     font-weight: bold;
-//     font-size: vars.$gutter;
-//     margin-top: vars.$gutter/2;
-//   }
-//   &__input {
-//     display: block;
-//     width: 100%;
-//     margin-top: vars.$gutter/2;
-//     margin-bottom: vars.$gutter/2;
-//     padding: vars.$gutter / 2;
-//     &__description {
-//       height: 100px;
-//       margin-top: vars.$gutter/2;
-//       display: block;
-//       width: 100%;
-//     }
-//   }
-//   &__button {
-//     color: vars.$alt-color;
-//     background-color: rgba(0, 0, 0, 0);
-//     border: 2px solid vars.$alt-color;
-//     padding: vars.$gutter/2;
-//     font-weight: bold;
-//     width: 100px;
-//     border-radius: 20%;
-//     margin: vars.$gutter auto 0 auto;
+.editWine {
+  width: 450px;
+  &__title {
+    margin-bottom: vars.$gutter;
+    text-decoration: underline;
+    font-size: vars.$gutter*1.5;
+  }
+}
+
+.edit {
+  &__form {
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+  }
+  &__label {
+    font-weight: bold;
+    font-size: vars.$gutter;
+    margin-top: vars.$gutter/2;
+    color: vars.$alt-color;
+    
+  }
+  &__input {
+    display: block;
+    width: 100%;
+    margin-top: vars.$gutter/2;
+    margin-bottom: vars.$gutter/2;
+    padding: vars.$gutter / 2;
+    &__description {
+      height: 150px;
+      margin-top: vars.$gutter/2;
+      display: block;
+      width: 100%;
+      padding: vars.$gutter / 2;
+      overflow: visible;
+    }
+    &__image {
+      height: 100px;
+      margin-top: vars.$gutter/2;
+      display: block;
+      width: 100%;
+    }
+  }
+  &__button {
+    color: vars.$alt-color;
+    background-color: rgba(0, 0, 0, 0);
+    border: 2px solid vars.$alt-color;
+    padding: vars.$gutter/2;
+    font-weight: bold;
+    width: 100px;
+    border-radius: 20%;
+    margin: vars.$gutter auto vars.$gutter auto;
   
-//     &:hover {
-//       background-color: vars.$alt-color;
-//       color: black;
-//     }
-//   }
-// }
-
-// .description {
-//   margin-top: 0;
-// }
+    &:hover {
+      background-color: vars.$alt-color;
+      color: black;
+    }
+  }
+}
