--- a/src/components/BackOffice/ModalPage/styles.scss
+++ b/src/components/BackOffice/ModalPage/styles.scss
@@ -52,6 +52,12 @@
     margin-bottom: vars.$gutter/2;
     padding: vars.$gutter / 2;
     &__description {
+      height: 150px;
+      margin-top: vars.$gutter/2;
+      display: block;
+      width: 100%;
+    }
+    &__image {
       height: 100px;
       margin-top: vars.$gutter/2;
       display: block;
@@ -66,7 +72,7 @@
     font-weight: bold;
     width: 100px;
     border-radius: 20%;
-    margin: vars.$gutter auto 0 auto;
+    margin: vars.$gutter auto vars.$gutter auto;
   
     &:hover {
       background-color: vars.$alt-color;
