--- a/src/components/Association/Description/styles.scss
+++ b/src/components/Association/Description/styles.scss
@@ -1,10 +1,9 @@
 @use 'src/styles/vars';
 
 .description {
-  padding: vars.$gutter*2 vars.$gutter*2 vars.$gutter*3 vars.$gutter*2;
-  max-width: 400px;
+  padding: vars.$gutter * 2 0;
   &__content {
     text-align: center;
-    line-height: 1.5;
+    line-height: 1.4em;
   }
 }
