--- a/src/components/Detail/styles.scss
+++ b/src/components/Detail/styles.scss
@@ -1,40 +1,26 @@
 @use 'src/styles/vars';
 
 .detail {
-  color: white;
-  margin-top: vars.$gutter*3;
-  padding-top: vars.$gutter*3;
-  padding-bottom: vars.$gutter*3;
+  color: vars.$secondary-color;
+  // padding: vars.$gutter*3 0;
   margin: auto;
   &__picture {
     text-align: center;
   }
-  &__product {
-    width: 75%;
-    margin: auto;
-    margin-bottom: vars.$gutter*2;
-    margin-top: vars.$gutter;
-    line-height: 1.3;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    }
   &__title {
     font-weight: bold;
+    font-size: 1.5em;
     text-transform: uppercase;
     text-decoration: underline;
     text-align: center;
-    margin-bottom: vars.$gutter;
-  }
-  &__description {
-    font-size: 1em;
-    text-align: center;
-    padding: vars.$gutter/2 vars.$gutter*2 vars.$gutter/2 vars.$gutter*2;
-    border-left: 2px solid white;
-    border-right: 2px solid white;
-
+    padding: vars.$gutter * 2;
+    color: vars.$secondary-color;
   }
   &__image {
-    width: 50%;
+    width: 90%;
+    margin-bottom: vars.$gutter;
+    border-radius: 2px;
+    box-shadow: 1px 1px 10px black;
   }
   &__flex {
     display: flex;
@@ -44,11 +30,22 @@
   &__button {
     display: flex;
     flex-direction: column;
-    margin-right: vars.$gutter;
-    margin-top: vars.$gutter;
+    margin: vars.$gutter;
     &__text {
-      margin-top: vars.$gutter/2;
+      margin-top: vars.$gutter / 2;
     }
+  }
+  &__product {
+    width: 90%;
+    margin: vars.$gutter auto;
+    line-height: 1.3;
+  }
+  &__description {
+    font-size: 1em;
+    text-align: center;
+    padding: vars.$gutter;
+    border-left: 2px solid vars.$secondary-color;
+    border-right: 2px solid vars.$secondary-color;
   }
 }
 
