--- a/src/components/BackOffice/ModalPage/styles.scss
+++ b/src/components/BackOffice/ModalPage/styles.scss
@@ -25,6 +25,7 @@
 
 .editCheese {
   width: 450px;
+  margin-top: -2rem;
   &__title {
     margin-bottom: vars.$gutter;
     text-decoration: underline;
