small modification css + modification webpack prod merge

--- a/src/components/Association/styles.scss
+++ b/src/components/Association/styles.scss
@@ -64,8 +64,11 @@
   &__name {
     padding-bottom: vars.$gutter / 2;
   }
-  &__choice {
+}
 
+@media (min-width:768px) {
+  .association {
+    width: 70%;
   }
 }
 
